--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:41:18 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:42:01 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -229,7 +229,7 @@ Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td>Jon Rahm +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -263,7 +263,7 @@ Not started</td>
       <td>Webb Simpson +1
 Not started</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -311,7 +311,7 @@ Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td class="greyout leftborder">Jon Rahm +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Viktor Hovland +5
 +1 thru 9</td>
     </tr>
@@ -343,7 +343,7 @@ Not started</td>
       <td>Robert MacIntyre +2
 Not started</td>
       <td class="greyout leftborder">Jon Rahm +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Rory McIlroy +3
 +1 thru 1</td>
     </tr>
@@ -421,7 +421,7 @@ Not started</td>
       <td>Patrick Cantlay(W) +1
 Not started</td>
       <td>Jon Rahm +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +5
 +1 thru 9</td>
       <td class="greyout">Sam Burns
@@ -485,7 +485,7 @@ Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Jon Rahm(W) +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Talor Gooch +2
 E thru 4</td>
       <td class="greyout">Brooks Koepka
@@ -503,7 +503,7 @@ Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Viktor Hovland +5
 +1 thru 9</td>
     </tr>
@@ -549,7 +549,7 @@ Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td>Jon Rahm +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -581,7 +581,7 @@ Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
       <td>Jon Rahm +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Paul Casey
 Out With Injury</td>
       <td class="greyout">Jordan Spieth
@@ -597,7 +597,7 @@ Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
       <td>Jon Rahm(W) +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -613,7 +613,7 @@ Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td>Jon Rahm +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Rory McIlroy +3
 +1 thru 1</td>
       <td class="greyout">Brooks Koepka
@@ -645,7 +645,7 @@ Not started</td>
       <td>Tiger Woods +1
 Not started</td>
       <td>Jon Rahm(W) +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -677,7 +677,7 @@ Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
       <td>Jon Rahm +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland(W) +5
 +1 thru 9</td>
       <td class="greyout">Xander Schauffele
@@ -709,7 +709,7 @@ Not started</td>
       <td>Robert MacIntyre +2
 Not started</td>
       <td>Jon Rahm +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Daniel Berger +5
 +3 thru 4</td>
       <td class="greyout">Jordan Spieth
@@ -753,7 +753,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -8
 Not started</td>
       <td>Jon Rahm(W) +2
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy +3
 +1 thru 1</td>
       <td>Viktor Hovland +5
@@ -771,7 +771,7 @@ Not started</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Jon Rahm(W) +2
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy +3
 +1 thru 1</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -787,7 +787,7 @@ Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
       <td>Jon Rahm +2
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy(W) +3
 +1 thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +5
@@ -803,7 +803,7 @@ Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
       <td>Jon Rahm(W) +2
-Not started</td>
+E thru 1</td>
       <td>Tony Finau +2
 E thru 5</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -819,7 +819,7 @@ Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td>Jon Rahm +2
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +5
 +1 thru 9</td>
       <td class="greyout leftborder">Sam Burns
@@ -835,7 +835,7 @@ Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td>Jon Rahm(W) +2
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +5
 +1 thru 9</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -851,7 +851,7 @@ Not started</td>
       <td>Patrick Cantlay(W) +1
 Not started</td>
       <td>Jon Rahm +2
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy +3
 +1 thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -865,7 +865,7 @@ Missed Cut</td>
       <td>Cameron Smith -2
 Not started</td>
       <td>Jon Rahm(W) +2
-Not started</td>
+E thru 1</td>
       <td>Bubba Watson +2
 Not started</td>
       <td>Rory McIlroy +3
@@ -883,7 +883,7 @@ Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
       <td>Jon Rahm +2
-Not started</td>
+E thru 1</td>
       <td>Daniel Berger +5
 +3 thru 4</td>
       <td class="greyout leftborder">Viktor Hovland +5
@@ -899,7 +899,7 @@ Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
       <td>Jon Rahm +2
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +5
 +1 thru 9</td>
       <td class="greyout leftborder">Jordan Spieth(W)
@@ -913,7 +913,7 @@ Missed Cut</td>
       <td>Collin Morikawa -1
 Not started</td>
       <td>Jon Rahm +2
-Not started</td>
+E thru 1</td>
       <td>Patrick Reed +3
 E thru 6</td>
       <td>Viktor Hovland(W) +5
