--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:41:18 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:42:01 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -165,7 +165,7 @@ Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td>Jon Rahm +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -199,7 +199,7 @@ Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
       <td class="greyout leftborder">Jon Rahm +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Tyrrell Hatton +2
 Not started</td>
     </tr>
@@ -307,7 +307,7 @@ Not started</td>
       <td>Collin Morikawa -1
 Not started</td>
       <td>Jon Rahm +2
-Not started</td>
+E thru 1</td>
       <td>Robert MacIntyre +2
 Not started</td>
       <td class="greyout leftborder">Daniel Berger +5
@@ -323,7 +323,7 @@ Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
       <td>Jon Rahm(W) +2
-Not started</td>
+E thru 1</td>
       <td>Tony Finau +2
 E thru 5</td>
       <td class="greyout leftborder">Jordan Spieth
@@ -339,7 +339,7 @@ Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
       <td>Jon Rahm +2
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +5
 +1 thru 9</td>
       <td class="greyout leftborder">Jordan Spieth(W)
@@ -353,7 +353,7 @@ Missed Cut</td>
       <td>Collin Morikawa -1
 Not started</td>
       <td>Jon Rahm +2
-Not started</td>
+E thru 1</td>
       <td>Patrick Reed +3
 E thru 6</td>
       <td>Viktor Hovland(W) +5
