--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:42:44 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:43:27 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -200,8 +200,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Jon Rahm +2
 E thru 1</td>
-      <td class="greyout">Tyrrell Hatton +2
-Not started</td>
+      <td class="greyout">Tyrrell Hatton +3
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
