--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:52:03 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:52:46 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -284,22 +284,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">2</td>
-      <td>Dustin Johnson -2
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Russell Henley +4
-+1 thru 6</td>
-      <td class="greyout leftborder">Xander Schauffele(W)
-Missed Cut</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">2</td>
       <td>Corey Conners(W) -1
@@ -313,6 +297,22 @@ Not started</td>
       <td class="greyout leftborder">Daniel Berger +5
 +3 thru 5</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">3</td>
+      <td>Dustin Johnson -2
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Russell Henley +5
++2 thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele(W)
+Missed Cut</td>
+      <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
     <tr>
@@ -332,6 +332,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">8</td>
+      <td>Collin Morikawa -1
+Not started</td>
+      <td>Jon Rahm +2
+E thru 1</td>
+      <td>Patrick Reed +2
+-1 thru 7</td>
+      <td>Viktor Hovland(W) +5
++1 thru 9</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Luke List
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">8</td>
       <td>Dustin Johnson -2
@@ -345,22 +361,6 @@ E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">9</td>
-      <td>Collin Morikawa -1
-Not started</td>
-      <td>Jon Rahm +2
-E thru 1</td>
-      <td>Patrick Reed +3
-E thru 6</td>
-      <td>Viktor Hovland(W) +5
-+1 thru 9</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Luke List
 Missed Cut</td>
     </tr>
     <tr>
