--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:59:13 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:59:56 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -221,15 +221,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-10</td>
+      <td class="bigbold">-11</td>
       <td>Scottie Scheffler(W) -8
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Jon Rahm +2
-E thru 1</td>
+      <td>Jon Rahm +1
+-1 thru 2</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -260,10 +260,10 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Webb Simpson +1
+      <td>Jon Rahm(W) +1
+-1 thru 2</td>
+      <td class="greyout leftborder">Webb Simpson +1
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-E thru 1</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -284,6 +284,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Roy Jeffrey B</td>
+      <td class="bigbold">-9</td>
+      <td>Scottie Scheffler(W) -8
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Patrick Cantlay +1
+Not started</td>
+      <td>Jon Rahm +1
+-1 thru 2</td>
+      <td class="greyout leftborder">Robert MacIntyre +2
+Not started</td>
+      <td class="greyout">Rory McIlroy +3
++1 thru 3</td>
+    </tr>
+    <tr>
       <td class="bigbold">The Resort</td>
       <td class="bigbold">-9</td>
       <td>Shane Lowry -3
@@ -294,8 +310,8 @@ Not started</td>
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E thru 1</td>
+      <td class="greyout leftborder">Jon Rahm +1
+-1 thru 2</td>
       <td class="greyout">Viktor Hovland +4
 E thru 10</td>
     </tr>
@@ -325,27 +341,11 @@ Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Tyrrell Hatton +3
-+1 thru 1</td>
++1 thru 2</td>
       <td class="greyout leftborder">Viktor Hovland(W) +4
 E thru 10</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-8</td>
-      <td>Scottie Scheffler(W) -8
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Patrick Cantlay +1
-Not started</td>
-      <td>Robert MacIntyre +2
-Not started</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E thru 1</td>
-      <td class="greyout">Rory McIlroy +3
-+1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -361,6 +361,22 @@ Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 Not started</td>
       <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lyle Rattray</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler -8
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Patrick Cantlay(W) +1
+Not started</td>
+      <td>Jon Rahm +1
+-1 thru 2</td>
+      <td class="greyout leftborder">Viktor Hovland +4
+E thru 10</td>
+      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
@@ -412,22 +428,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Patrick Cantlay(W) +1
-Not started</td>
-      <td>Jon Rahm +2
-E thru 1</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-E thru 10</td>
-      <td class="greyout">Sam Burns
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">-5</td>
       <td>Scottie Scheffler -8
@@ -441,6 +441,22 @@ Not started</td>
       <td class="greyout leftborder">Viktor Hovland +4
 E thru 10</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ron Harrington</td>
+      <td class="bigbold">-5</td>
+      <td>Hideki Matsuyama -3
+Not started</td>
+      <td>Cameron Smith -2
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 2</td>
+      <td class="greyout leftborder">Talor Gooch +2
+E thru 6</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -476,22 +492,6 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ron Harrington</td>
-      <td class="bigbold">-4</td>
-      <td>Hideki Matsuyama -3
-Not started</td>
-      <td>Cameron Smith -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Jon Rahm(W) +2
-E thru 1</td>
-      <td class="greyout leftborder">Talor Gooch +2
-E thru 6</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith -2
@@ -500,12 +500,28 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Patrick Cantlay +1
+      <td>Jon Rahm(W) +1
+-1 thru 2</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-E thru 1</td>
       <td class="greyout">Viktor Hovland +4
 E thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -2
+Not started</td>
+      <td>Corey Conners(W) -1
+Not started</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Jon Rahm +1
+-1 thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -540,16 +556,32 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">-2</td>
-      <td>Cameron Smith -2
+      <td>Hideki Matsuyama -3
 Not started</td>
-      <td>Corey Conners(W) -1
+      <td>Collin Morikawa(W) -1
 Not started</td>
-      <td>Will Zalatoris -1
+      <td>Patrick Cantlay +1
 Not started</td>
-      <td>Jon Rahm +2
-E thru 1</td>
+      <td>Jon Rahm +1
+-1 thru 2</td>
+      <td class="greyout leftborder">Paul Casey
+Out With Injury</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">-2</td>
+      <td>Hideki Matsuyama -3
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 2</td>
+      <td>Patrick Cantlay +1
+Not started</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -572,51 +604,35 @@ Not started</td>
 E thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">-1</td>
-      <td>Hideki Matsuyama -3
-Not started</td>
-      <td>Collin Morikawa(W) -1
-Not started</td>
-      <td>Patrick Cantlay +1
-Not started</td>
-      <td>Jon Rahm +2
-E thru 1</td>
-      <td class="greyout leftborder">Paul Casey
-Out With Injury</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">-1</td>
-      <td>Hideki Matsuyama -3
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Patrick Cantlay +1
-Not started</td>
-      <td>Jon Rahm(W) +2
-E thru 1</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jabby</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">-2</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Jon Rahm +2
-E thru 1</td>
+      <td>Jon Rahm +1
+-1 thru 2</td>
       <td class="greyout leftborder">Rory McIlroy +3
 +1 thru 3</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith -2
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 2</td>
+      <td>Tiger Woods +1
+Not started</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -636,18 +652,18 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">Walk 1</td>
       <td class="bigbold">0</td>
-      <td>Cameron Smith -2
+      <td>Collin Morikawa -1
 Not started</td>
-      <td>Corey Conners -1
+      <td>Will Zalatoris -1
 Not started</td>
-      <td>Tiger Woods +1
+      <td>Patrick Cantlay +1
 Not started</td>
-      <td>Jon Rahm(W) +2
-E thru 1</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
+      <td>Jon Rahm +1
+-1 thru 2</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +4
+E thru 10</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -668,18 +684,18 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">1</td>
-      <td>Collin Morikawa -1
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">0</td>
+      <td>Scottie Scheffler -8
 Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Patrick Cantlay +1
-Not started</td>
-      <td>Jon Rahm +2
-E thru 1</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +4
+      <td>Jon Rahm(W) +1
+-1 thru 2</td>
+      <td>Rory McIlroy +3
++1 thru 3</td>
+      <td>Viktor Hovland +4
 E thru 10</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -700,32 +716,16 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">1</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Jon Rahm(W) +2
-E thru 1</td>
-      <td>Rory McIlroy +3
-+1 thru 3</td>
-      <td>Viktor Hovland +4
-E thru 10</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">1</td>
       <td>Corey Conners(W) -1
 Not started</td>
       <td>Collin Morikawa -1
 Not started</td>
+      <td>Jon Rahm +1
+-1 thru 2</td>
       <td>Robert MacIntyre +2
 Not started</td>
-      <td>Jon Rahm +2
-E thru 1</td>
       <td class="greyout leftborder">Daniel Berger +5
 +3 thru 6</td>
       <td class="greyout">Jordan Spieth
@@ -765,13 +765,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Justin Thomas -1
 Not started</td>
-      <td>Jon Rahm(W) +2
-E thru 1</td>
+      <td>Jon Rahm(W) +1
+-1 thru 2</td>
       <td>Rory McIlroy +3
 +1 thru 3</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -781,13 +781,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Dustin Johnson -2
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
-      <td>Jon Rahm +2
-E thru 1</td>
+      <td>Jon Rahm +1
+-1 thru 2</td>
       <td>Rory McIlroy(W) +3
 +1 thru 3</td>
       <td class="greyout leftborder">Viktor Hovland +4
@@ -797,13 +797,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Jon Rahm +2
-E thru 1</td>
+      <td>Jon Rahm +1
+-1 thru 2</td>
       <td>Viktor Hovland +4
 E thru 10</td>
       <td class="greyout leftborder">Sam Burns
@@ -813,13 +813,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Jon Rahm(W) +2
-E thru 1</td>
+      <td>Jon Rahm(W) +1
+-1 thru 2</td>
       <td>Viktor Hovland +4
 E thru 10</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -829,13 +829,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Collin Morikawa -1
 Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 2</td>
       <td>Patrick Cantlay +1
 Not started</td>
-      <td>Jon Rahm(W) +2
-E thru 1</td>
       <td>Tony Finau +2
 E thru 6</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -845,13 +845,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">4</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Patrick Cantlay(W) +1
 Not started</td>
-      <td>Jon Rahm +2
-E thru 1</td>
+      <td>Jon Rahm +1
+-1 thru 2</td>
       <td>Rory McIlroy +3
 +1 thru 3</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -861,13 +861,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
-      <td>Jon Rahm +2
-E thru 1</td>
+      <td>Jon Rahm +1
+-1 thru 2</td>
       <td>Viktor Hovland +4
 E thru 10</td>
       <td class="greyout leftborder">Daniel Berger +5
@@ -877,11 +877,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">6</td>
       <td>Collin Morikawa -1
 Not started</td>
-      <td>Jon Rahm +2
-E thru 1</td>
+      <td>Jon Rahm +1
+-1 thru 2</td>
       <td>Patrick Reed +2
 -1 thru 7</td>
       <td>Viktor Hovland(W) +4
@@ -893,11 +893,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">6</td>
       <td>Cameron Smith -2
 Not started</td>
-      <td>Jon Rahm(W) +2
-E thru 1</td>
+      <td>Jon Rahm(W) +1
+-1 thru 2</td>
       <td>Rory McIlroy +3
 +1 thru 3</td>
       <td>Viktor Hovland +4
@@ -909,13 +909,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">6</td>
       <td>Dustin Johnson -2
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
-      <td>Jon Rahm +2
-E thru 1</td>
+      <td>Jon Rahm +1
+-1 thru 2</td>
       <td>Viktor Hovland +4
 E thru 10</td>
       <td class="greyout leftborder">Jordan Spieth(W)
