--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:59:13 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 12:59:56 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -157,15 +157,15 @@ E thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-12</td>
+      <td class="bigbold">-13</td>
       <td>Scottie Scheffler(W) -8
 Not started</td>
       <td>Shane Lowry -3
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Jon Rahm +2
-E thru 1</td>
+      <td>Jon Rahm +1
+-1 thru 2</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -196,12 +196,12 @@ Not started</td>
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Patrick Cantlay +1
+      <td>Jon Rahm +1
+-1 thru 2</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E thru 1</td>
       <td class="greyout">Tyrrell Hatton +3
-+1 thru 1</td>
++1 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -285,13 +285,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">1</td>
       <td>Corey Conners(W) -1
 Not started</td>
       <td>Collin Morikawa -1
 Not started</td>
-      <td>Jon Rahm +2
-E thru 1</td>
+      <td>Jon Rahm +1
+-1 thru 2</td>
       <td>Robert MacIntyre +2
 Not started</td>
       <td class="greyout leftborder">Daniel Berger +5
@@ -317,13 +317,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Collin Morikawa -1
 Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 2</td>
       <td>Patrick Cantlay +1
 Not started</td>
-      <td>Jon Rahm(W) +2
-E thru 1</td>
       <td>Tony Finau +2
 E thru 6</td>
       <td class="greyout leftborder">Jordan Spieth
@@ -333,11 +333,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">6</td>
       <td>Collin Morikawa -1
 Not started</td>
-      <td>Jon Rahm +2
-E thru 1</td>
+      <td>Jon Rahm +1
+-1 thru 2</td>
       <td>Patrick Reed +2
 -1 thru 7</td>
       <td>Viktor Hovland(W) +4
@@ -349,13 +349,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">6</td>
       <td>Dustin Johnson -2
 Not started</td>
       <td>Patrick Cantlay +1
 Not started</td>
-      <td>Jon Rahm +2
-E thru 1</td>
+      <td>Jon Rahm +1
+-1 thru 2</td>
       <td>Viktor Hovland +4
 E thru 10</td>
       <td class="greyout leftborder">Jordan Spieth(W)
