--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:02:05 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:02:48 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -168,8 +168,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 Not started</td>
-      <td class="greyout">Tony Finau +2
-E thru 6</td>
+      <td class="greyout">Tony Finau +3
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
@@ -540,22 +540,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">-3</td>
-      <td>Shane Lowry -3
-Not started</td>
-      <td>Dustin Johnson(W) -2
-Not started</td>
-      <td>Matthew Fitzpatrick E
-Not started</td>
-      <td>Tony Finau +2
-E thru 6</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">-2</td>
       <td>Hideki Matsuyama -3
@@ -617,6 +601,22 @@ Not started</td>
       <td class="greyout leftborder">Rory McIlroy +3
 +1 thru 3</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">-2</td>
+      <td>Shane Lowry -3
+Not started</td>
+      <td>Dustin Johnson(W) -2
+Not started</td>
+      <td>Matthew Fitzpatrick E
+Not started</td>
+      <td>Tony Finau +3
++1 thru 7</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -828,22 +828,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">3</td>
-      <td>Collin Morikawa -1
-Not started</td>
-      <td>Jon Rahm(W) +1
--1 thru 2</td>
-      <td>Patrick Cantlay +1
-Not started</td>
-      <td>Tony Finau +2
-E thru 6</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hasbulla</td>
       <td class="bigbold">4</td>
       <td>Justin Thomas -1
@@ -857,6 +841,22 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">4</td>
+      <td>Collin Morikawa -1
+Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 2</td>
+      <td>Patrick Cantlay +1
+Not started</td>
+      <td>Tony Finau +3
++1 thru 7</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
