--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:03:31 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:04:14 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -285,15 +285,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">2</td>
       <td>Corey Conners(W) -1
 Not started</td>
       <td>Collin Morikawa -1
 Not started</td>
       <td>Jon Rahm +1
 -1 thru 2</td>
-      <td>Robert MacIntyre +2
-Not started</td>
+      <td>Robert MacIntyre +3
++1 thru 1</td>
       <td class="greyout leftborder">Daniel Berger +5
 +3 thru 6</td>
       <td class="greyout">Jordan Spieth
