--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:11:24 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:12:07 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -332,22 +332,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">5</td>
-      <td>Collin Morikawa -1
-Not started</td>
-      <td>Jon Rahm +1
--1 thru 2</td>
-      <td>Patrick Reed +2
--1 thru 7</td>
-      <td>Viktor Hovland(W) +3
--1 thru 11</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Luke List
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">5</td>
       <td>Dustin Johnson -2
@@ -361,6 +345,22 @@ Not started</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">6</td>
+      <td>Collin Morikawa -1
+Not started</td>
+      <td>Jon Rahm +1
+-1 thru 2</td>
+      <td>Viktor Hovland(W) +3
+-1 thru 11</td>
+      <td>Patrick Reed +3
+E thru 8</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Luke List
 Missed Cut</td>
     </tr>
     <tr>
